Worked on skills.html. Still need to adjust positioning

--- a/Projects.html
+++ b/Projects.html
@@ -21,11 +21,16 @@
         </nav>
     </header>
     <div id="Project-text">
-        <p class="project-1">
+        <p class="projectTitle">
             Here you can find my projects
         </p>
-        <p>
-            which include projects like websites, programs with python, and more.
+        <p class="ProjectSubTitle">
+            Which include projects like websites, programs with python, and more.
         </p>
+            <div id="Boxes">
+            <p class="BoxLeft"> - </p>
+            <!-- <p>Maak right box later</p>  -->
+        </div>
+    </div>
 </body>
 </html>
