--- a/Skills.html
+++ b/Skills.html
@@ -25,8 +25,10 @@
     <div id="skill-container">
         <div class="skill">
             <div class="skill-text">
-                <img class="HTML-icon" src="IMG/HTML.png" alt="HTML Icon">
-                <p>HTML</p>
+                <div>
+                    <img class="HTML-icon" src="IMG/HTML.png" alt="HTML Icon">
+                    <p>HTML</p>
+                </div>
                 <h4>85%</h4>
             </div>
             <div class="progress-bar">
