17/12/2024 - Commited Just in case

--- a/Projects.html
+++ b/Projects.html
@@ -27,9 +27,16 @@
         <p class="ProjectSubTitle">
             Which include projects like websites, programs with python, and more.
         </p>
-            <div id="Boxes">
-            <p class="BoxLeft"> - </p>
-            <!-- <p>Maak right box later</p>  -->
+        <div id="Boxes">
+            <div class="top-row">
+                <div class="BoxLeft" data-text="BoxText">BO</div>
+                <div class="BoxLeft" data-text="BoxText">Websites</div>
+            </div>
+            <div class="bottom-row">
+                <div class="BoxUnderLeft" data-text="BoxText">Python</div>
+                <div class="BoxUnderMiddle" data-text="BoxText">Javascript</div>
+                <div class="BoxUnderRight" data-text="BoxText">Github</div>
+            </div>
         </div>
     </div>
 </body>
