Added link in BO in Projects.html

--- a/ProjectsBO.html
+++ b/ProjectsBO.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Projects</title>
+    <title>BO</title>
 </head>
 <body>
     <header id="Top">
@@ -20,26 +20,7 @@
             </ul>
         </nav>
     </header>
-    <div id="Project-text">
-        <p class="projectTitle">
-            Here you can find my projects
-        </p>
-        <p class="ProjectSubTitle">
-            Which include projects like websites, programs with python, and more.
-        </p>
-        <div id="Boxes">
-            <div class="top-row">
-                <div class="BoxLeft" data-text="BoxText" onclick="location.href='ProjectsBO.html';" style="cursor: pointer;">
-                    BO
-                </div>
-                <div class="BoxLeft" data-text="BoxText">Websites</div>
-            </div>
-            <div class="bottom-row">
-                <div class="BoxUnderLeft" data-text="BoxText">Python</div>
-                <div class="BoxUnderMiddle" data-text="BoxText">Javascript</div>
-                <div class="BoxUnderRight" data-text="BoxText">Github</div>
-            </div>
-        </div>
-    </div>
+    <h1> Mijn blik op de toekomst</h1>
+    <h2> Mijn (tech)skills aan het einde van de opleiding</h2>
 </body>
 </html>
